Add modified bootstrap theme from gnome.org/outreachy
There were several different complicated things in this commit.

The easy step was to add theme files (css, js, header and footer images,
minus the sponsor logos) from
https://git.gnome.org/browse/gnome-web-www/tree/theme/outreachy

Next, I added the bootstrap-specific css stylesheet references and
javascript tags to base.html, and duplicated the header and footer from
the gnome.org/outreachy page source.

The tricky bit was how to grab the pages I wanted to link to in the page
header. Each page has a checkbox under the 'promote' tab in wagtail that
sets the show_in_menu boolean flag.

http://docs.wagtail.io/en/v1.11.1/reference/pages/queryset_reference.html?highlight=show_in_menu#wagtail.wagtailcore.query.PageQuerySet.in_menu

I needed to be able to find all live pages in the site that had that
flag set, from the base.html template. In order to set variables in a
django page, I used a context processor:

https://docs.djangoproject.com/en/1.11/topics/templates/#context-processors
https://docs.djangoproject.com/en/1.11/ref/templates/api/#writing-your-own-context-processors

I used those pages, combined with wagtail documentation, to create
home/context_processors.py.

The next step was to set up django to point to the headerpages function
in home/context_processors.py. To do that, I added it to
outreachyhome/settings/base.py, following directions at

https://docs.djangoproject.com/en/1.11/topics/templates/#django.template.backends.django.DjangoTemplates

Once I had a context that was called headerpages, which contained all
the pages with show_in_menu set, I used a for loop to add the pages to
the navigation bar in outreachyhome/templates/base.html.

Signed-off-by: Sarah Sharp <sharp@otter.technology>

--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -1,4 +1,5 @@
 {% load static wagtailuserbar %}
+{% load wagtailcore_tags %}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -22,7 +23,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/outreachyhome.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
         {% block extra_css %}
             {# Override this in templates to add extra stylesheets #}
@@ -31,11 +34,45 @@
 
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
+        <div class="fixed-container">
+                <div class="navbar nav-container">
+                        <div class="container">
+                                <button type="button" class="btn btn-navbar collapsed" data-toggle="collapse" data-target=".nav-collapse" >
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span></button>
+                                        <a class="brand" href="/">Outreachy</a>                
+                                        <div class="nav-collapse collapse" style="height: 0px;">
+                                            <ul class="nav">
+						{% for headerp in header_pages %}
+                                                    <li><a href="{% pageurl headerp %}">{{ headerp.title }}</a></li>
+                                                {% endfor %}
+                                            </ul>
+                                </div>
+                        </div>
+
+                </div>
+        </div>
+        <div class="container" id="home">
 
         {% block content %}{% endblock %}
+        </div>
 
+        <div class="footer">
+                <div class="footer-art"></div>
+                <div class="footer-grass"></div>
+                <div class="footer-wrapper">
+                        <ul class="footer-links">
+                                <li>Copyright © 2017 Outreachy</li>
+                                <li class="cc-description">Free to share and remix: <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons CC-BY</a>, except for the individual organization logos, which are property of their respective owners.</li>
+                        </ul>
+                </div>
+        </div>
         {# Global javascript #}
-        <script type="text/javascript" src="{% static 'js/outreachyhome.js' %}"></script>
+	<script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
