Add multiple streamfield types to homepage.
This allows us to create the kinds of pages we need for the landing
page, sponsor, mentor, and intern pages.

Signed-off-by: Sarah Sharp <sharp@otter.technology>

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -5,5 +5,5 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-    {{ page.body|richtext }}
+    {% include_block page.body %}
 {% endblock %}
