Make a pre-scaled logo Streamfield.
This allows us to use the ease of the image streamfield, but make sure
all images aren't bigger than 200x200 pixels.

This is mostly a hack until I can get private sponsor pages internally,
and work out how to pull the sponsor logos out, and display them
dynamically on the home page as we confirm sponsorship.

Signed-off-by: Sarah Sharp <sharp@otter.technology>

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
 
 {% load wagtailcore_tags %}
+{% load wagtailimages_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-    {% include_block page.body %}
+    {% for thingie in page.body %}
+        {% if thingie.block_type == 'logo' %}
+            <center>{% image thingie.value max-200x200 %}</center>
+        {% else %}
+            {% include_block thingie %}
+        {% endif %}
+    {% endfor %}
 {% endblock %}
