--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -9,6 +9,9 @@
     {% for thingie in page.body %}
         {% if thingie.block_type == 'logo' %}
             <center>{% image thingie.value max-200x200 %}</center>
+        {# Note: Wagtail's BlockQuoteBlock uses raw text as the value, so this is a work-around with a rich text base. #}
+        {% elif thingie.block_type == 'quote' %}
+            <blockquote>{{ thingie.value }}</blockquote>
         {% else %}
             {% include_block thingie %}
         {% endif %}
