Add styling for tables.
According to the documentation, bootstrap's table styling is opt-in:
http://getbootstrap.com/css/#tables

I don't currently have the time to extend the wagtail TableBlock to use
<table class="table"> but I think adding the class to a <div> might be
equivalent? It seems to work, even if I'm still learning about CSS and
HTML.

Signed-off-by: Sarah Sharp <sharp@otter.technology>

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -12,6 +12,8 @@
         {# Note: Wagtail's BlockQuoteBlock uses raw text as the value, so this is a work-around with a rich text base. #}
         {% elif thingie.block_type == 'quote' %}
             <blockquote>{{ thingie.value }}</blockquote>
+        {% elif thingie.block_type == 'table' %}
+            <div class="table">{% include_block thingie %}</div>
         {% else %}
             {% include_block thingie %}
         {% endif %}
