--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -8,23 +8,15 @@
     <h1>Outreachy Round {{ page.specific.roundnumber }}</h1>
 
     <p>This page contains information specific to the {{ page.specific.internshipstartdate }} to {{ page.specific.internshipenddate }}
-       round of {# FIXME how do I reference the root URL #}Outreachy internships.
-       The application deadline for this round is {{ page.specific.applicationsopendate }}.
+       round of {# FIXME how do I reference the root URL #}Outreachy internships. The timeline for this round is:
     </p>
-
-    <h1>Sponsors</h1>
-
-    {{ page.specific.sponsordetails|richtext }}
-
-    <p>This round is generously sponsored by the following organizations and companies.</p>
-
-    {# I think there's a way to conditionally add the ul tags only if there's page children, but meh for now. #}
-    <ul>
-    {% for round in page.get_children %}
-	{# Rounds may have spread the word pages as children, so instead of using get_children, we should do http://docs.wagtail.io/en/v1.11.1/topics/pages.html#customising-template-context #}
-        <li><a href="{% pageurl round %}">{{ round.specific.roundname }}</a> ({{ round.specific.internshipstartdate }} - {{ round.specific.internshipenddate }}) {{ round.get_children|length }} FOSS communities offered internships
-        </li>
-    {% endfor %}
-    </ul>
-
+    <table class=table>
+        <tr><td>{{ page.specific.landingdue }}</td><td>Most FOSS communities will be listed</td></tr>
+        <tr><td>{{ page.specific.appsopen }}</td><td>Applications open</td></tr>
+        <tr><td>{{ page.specific.lateorgs }}</td><td>Last date for new FOSS community listings</td></tr>
+        <tr><td>{{ page.specific.appsclose }}</td><td>Applications and contributions deadline</td></tr>
+        <tr><td>{{ page.specific.appsclose }} to {{ page.specific.internannounce }}</td><td>Applicants are encouraged to continue making contributions for the project they applied for</td></tr>
+        <tr><td>{{ page.specific.appsopen }}</td><td>Accepted interns announced on this page at 4pm UTC</td></tr>
+        <tr><td>{{ page.specific.appsopen }}</td><td>Internships period</td></tr>
+    </table>
 {% endblock %}
