Add a list of participating orgs for the round.
If there are no community page children, display a "coming soon"
message.

Signed-off-by: Sarah Sharp <sharp@otter.technology>

--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -19,4 +19,8 @@
         <tr><td>{{ page.specific.internannounce }}</td><td>Accepted interns announced on this page at 4pm UTC</td></tr>
         <tr><td>{{ page.specific.appsopen }}</td><td>Internships period</td></tr>
     </table>
+    <h2>Participating Organizations</h2>
+    {% if not page.get_children %}
+        <p>Free and open source software (FOSS) communities that are are offering internships in this round will be listed soon!</p>
+    {% endif %}
 {% endblock %}
