Add simple login and account creation pages.
Make sure that the login and account creation pages redirect if the next
link is set.

Signed-off-by: Sarah Sharp <sharp@otter.technology>

--- a/outreachyhome/templates/registration/registration_form.html
+++ b/outreachyhome/templates/registration/registration_form.html
@@ -27,8 +27,8 @@
 </tr>
 </table>
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
+<input type="submit" value="Create Account" />
+<p>Already have an account? <a href="{% url 'login' %}?next={{ next|urlencode }}">Login.</a></p>
 </form>
 
 {% endblock %}
