Fix HTML template for round page internship dates.
Signed-off-by: Sarah Sharp <sharp@otter.technology>

--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -17,7 +17,7 @@
         <tr><td>{{ page.specific.appsclose }}</td><td>Applications and contributions deadline</td></tr>
         <tr><td>{{ page.specific.appsclose }} to {{ page.specific.internannounce }}</td><td>Applicants are encouraged to continue making contributions for the project they applied for</td></tr>
         <tr><td>{{ page.specific.internannounce }}</td><td>Accepted interns announced on this page at 4pm UTC</td></tr>
-        <tr><td>{{ page.specific.appsopen }}</td><td>Internships period</td></tr>
+	<tr><td>{{ page.specific.internstarts }} to {{ page.specific.internends }}</td><td>Internships period</td></tr>
     </table>
     {{ page.specific.sponsordetails|richtext }}
 {% endblock %}
