Add late application deadline to rounds page template

--- a/home/templates/home/round_page.html
+++ b/home/templates/home/round_page.html
@@ -15,6 +15,7 @@
         <tr><td>{{ page.specific.appsopen }}</td><td>Applications open</td></tr>
         <tr><td>{{ page.specific.lateorgs }}</td><td>Last date for new FOSS community listings</td></tr>
         <tr><td>{{ page.specific.appsclose }}</td><td>Applications and contributions deadline</td></tr>
+        <tr><td>{{ page.specific.appslate }}</td><td>Deadline for late applications and contributions for specific projects (see below for which projects are accepting late applications)</td></tr>
         <tr><td>{{ page.specific.appsclose }} to {{ page.specific.internannounce }}</td><td>Applicants are encouraged to continue making contributions for the project they applied for</td></tr>
         <tr><td>{{ page.specific.internannounce }}</td><td>Accepted interns announced on this page at 4pm UTC</td></tr>
 	<tr><td>{{ page.specific.internstarts }} to {{ page.specific.internends }}</td><td>Internships period</td></tr>
