Update page titles for contact sent pages

--- a/contacts/templates/contact_form/contact_organizers.html
+++ b/contacts/templates/contact_form/contact_organizers.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Contact Outreachy organizers
+{% endblock %}
+
 {% block content %}
 
 <p>Please contact Outreachy organizers for questions relating to sponsorship, community participation, or applicant eligibility.</p>
