--- a/contacts/templates/contact_form/contact_mentors.html
+++ b/contacts/templates/contact_form/contact_mentors.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Contact Outreachy mentors
+{% endblock %}
+
 {% block content %}
 
 <p>Please contact Outreachy mentors for general applicant questions, such as which project to choose or if you are having a hard time contacting a mentor.</p>
