--- a/contacts/templates/contact_form/contacted_mentors.html
+++ b/contacts/templates/contact_form/contacted_mentors.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Email sent!
+{% endblock %}
+
 {% block content %}
 
 <p>Thanks for contacting the Outreachy mentors. During application periods, it may take 1-3 days to respond to email. You might also try to contact the community coordinator listed on the community landing page for a faster response.</p>
