--- a/contacts/templates/contact_form/contacted_organizers.html
+++ b/contacts/templates/contact_form/contacted_organizers.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Email sent!
+{% endblock %}
+
 {% block content %}
 
 <p>Thanks for contacting the Outreachy organizers. During application periods, it may take 1-3 days to respond to email. You might also try to contact us for quick public questions on <a href="https://twitter.com/outreachy">Twitter.</a></p>
