--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -24,6 +24,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <h2>Participate in Outreachy</h2>
 <p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
 <p>If a community that participated in Outreachy in the past hasn't announced they're participating in this round, you can sign up to receive an email notification when the community joins the current round.</p>
+<h2>Submit a New FOSS community for Organizer Review</h2>
 <p>If you want a new community to participate in Outreachy, you will need to review the <a href="/mentor/">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review below.
 </p>
 
