--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -8,7 +8,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 
 <h1>Call for Participation in Outreachy</h1>
 <p>Outreachy provides three-month internships for people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>. Internships run twice a year.</p>
-<p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers. Google Summer of Code mentors may also need to sign up to be a mentor if their coordinator is using Outreachy community page for GSoC project listings.</p>
+<p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers. Google Summer of Code mentors may also need to sign up to be a mentor if their coordinator is using Outreachy FOSS community page for GSoC project listings.</p>
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
     <table class=table>
 	<tr><td>{{ current_round.pingnew }}</td><td>Outreachy call for participating communities opens. Mentor and volunteer sign up opens.</td></tr>
@@ -17,16 +17,32 @@ Call for Outreachy community coordinators, mentors, and volunteers
 	<tr><td>{{ current_round.ProjectsDeadline }}</td><td>Last date to add new Outreachy internship projects</td></tr>
 	<tr><td>{{ current_round.appsclose }}</td><td>Outreachy application period ends for most communities</td></tr>
 	<tr><td>{{ current_round.LateApplicationsDeadline }}</td><td>Outreachy application period ends for communities with an extended deadline</td></tr>
-	<tr><td>{{ current_round.InternSelectionDeadline }}</td><td>Deadline for coordinators and mentors to select interns</td></tr>
+	<tr><td>{{ current_round.InternSelectionDeadline }}</td><td>Deadline for mentors to select interns</td></tr>
 	<tr><td>{{ current_round.InternConfirmationDeadline }}</td><td>FOSS communities receive confirmation from Outreachy organizers of final approved interns</td></tr>
 	<tr><td>{{ current_round.internannounce }}</td><td>Interns are publicly announced on <a href="/alums/">the alums page</a></td></tr>
     </table>
-<h2>Participate in Outreachy</h2>
-<p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
-<p>If a community that participated in Outreachy in the past hasn't announced they're participating in this round, you can sign up to receive an email notification when the community joins the current round.</p>
 <h2>Submit a New FOSS community for Organizer Review</h2>
+<p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinator for that community.</p>
 <p>If you want a new community to participate in Outreachy, you will need to review the <a href="/mentor/">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review below.
 </p>
+<h2>Mentor or Volunteer for a Participating FOSS Community</h2>
+<p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
 
+<ul>
+{% for c in participating_communities %}
+	<li>{{ c.name }}</li>
+{% endfor %}
+</ul>
+
+<p>If a community that participated in Outreachy in the past hasn't announced they're participating in this round, and you want to mentor or volunteer for that community, you can sign up below to receive an email notification when the community joins the current round.</p>
+
+<h2>Coordinate for a FOSS Community</h2>
+<p>Coordinations should <a href="/mentor/">understand the coordinator duties</a> and what <a href="/mentor/community-faq">information they will need to update</a> about the community.</p>
+
+<ul>
+{% for c in not_participating_communities %}
+	<li>{{ c.name }}</li>
+{% endfor %}
+</ul>
 
 {% endblock %}
