Split out StreamField type-specific templates.
Rather than checking the `block_type` in the template for the HomePage
model, we can construct the Block instances with a path to a custom
template that renders that type any way we want.

This is a little less boilerplate; it makes the connection between
custom block types and how they're rendered explicit; and it makes the
templates reusable if we want to set up other similar StreamFields for
other page types later.

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,21 +1,9 @@
 {% extends "base.html" %}
 
 {% load wagtailcore_tags %}
-{% load wagtailimages_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-    {% for thingie in page.body %}
-        {% if thingie.block_type == 'logo' %}
-            <center>{% image thingie.value max-200x200 style="padding-top:20px; padding-left:30px;" %}</center>
-        {# Note: Wagtail's BlockQuoteBlock uses raw text as the value, so this is a work-around with a rich text base. #}
-        {% elif thingie.block_type == 'quote' %}
-            <blockquote>{{ thingie.value }}</blockquote>
-        {% elif thingie.block_type == 'table' %}
-            <div class="table">{% include_block thingie %}</div>
-        {% else %}
-            {% include_block thingie %}
-        {% endif %}
-    {% endfor %}
+{% include_block page.body %}
 {% endblock %}
