Add community detail pages for volunteers, mentors, and coordinators.
TODO: If a community is not participating, there's currently a set of
links that will be broken:

 * `/communities/cfp/{{ community.slug }}/notify-me/`
 * `/communities/cfp/{{ community.slug }}/coordinator-signup/`
 * `/communities/cfp/{{ community.slug }}/participate/`

These are all form views and need extra development effort. I'll get
back to those shortly, after I complete the read-only views.

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -30,7 +30,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 
 <ul>
 {% for c in participating_communities %}
-	<li>{{ c.name }}</li>
+	<li><a href="/communities/cfp/{{ c.slug }}/">{{ c.name }}</a></li>
 {% endfor %}
 </ul>
 
@@ -41,7 +41,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 
 <ul>
 {% for c in not_participating_communities %}
-	<li>{{ c.name }}</li>
+	<li><a href="/communities/cfp/{{ c.slug }}/">{{ c.name }}</a></li>
 {% endfor %}
 </ul>
 
