--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -19,7 +19,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 	<tr><td>{{ current_round.LateApplicationsDeadline }}</td><td>Outreachy application period ends for communities with an extended deadline</td></tr>
 	<tr><td>{{ current_round.InternSelectionDeadline }}</td><td>Deadline for mentors to select interns</td></tr>
 	<tr><td>{{ current_round.InternConfirmationDeadline }}</td><td>FOSS communities receive confirmation from Outreachy organizers of final approved interns</td></tr>
-	<tr><td>{{ current_round.internannounce }}</td><td>Interns are publicly announced on <a href="/alums/">the alums page</a></td></tr>
+	<tr><td>{{ current_round.internannounce }}</td><td>Interns are publicly announced at 4pm UTC on <a href="/alums/">the alums page</a></td></tr>
     </table>
 <h2>Submit a New FOSS community for Organizer Review</h2>
 <p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinator for that community.</p>
