Remove all references of GSoC pages.
Managing GSoC data as well is proving too complex. I'm removing this
stretch goal and references in the template to it.

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -8,7 +8,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 
 <h1>Call for Participation in Outreachy</h1>
 <p>Outreachy provides three-month internships for people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>. Internships run twice a year.</p>
-<p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers. Google Summer of Code mentors may also need to sign up to be a mentor if their coordinator is using Outreachy FOSS community page for GSoC project listings.</p>
+<p>Outreachy welcomes participation from FOSS communities and people seeking to help out as Outreachy coordinators, mentors, and volunteers.</p>
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
     <table class=table>
 	<tr><td>{{ current_round.pingnew }}</td><td>Outreachy call for participating communities opens. Mentor and volunteer sign up opens.</td></tr>
