--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -22,9 +22,10 @@ Call for Outreachy community coordinators, mentors, and volunteers
 	<tr><td>{{ current_round.internannounce }}</td><td>Interns are publicly announced at 4pm UTC on <a href="/alums/">the alums page</a></td></tr>
     </table>
 <h2>Submit a New FOSS community for Organizer Review</h2>
-<p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinator for that community.</p>
-<p>If you want a new community to participate in Outreachy, you will need to review the <a href="/mentor/">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review below.
+<p>First, double check that the community isn't listed in the participating communities or past communities list. If the community is listed as a past Outreachy community, you can sign up to coordinate for that community.</p>
+<p>If you want a new community to participate in Outreachy, you will need to review the <a href="/mentor/">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
 </p>
+<a class='btn btn-primary' href="/communities/cfp/add/">Submit a New Community</a>
 <h2>Mentor or Volunteer for a Participating FOSS Community</h2>
 <p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
 
