--- a/home/templates/home/project_read_only.html
+++ b/home/templates/home/project_read_only.html
@@ -48,10 +48,10 @@ Pending {{ community.name }} Project - {{ project.short_title }}
 <form action="{% url 'project-status' community_slug=community.slug project_slug=project.slug %}" method="post">
     {% csrf_token %}
     {% if project.list_project is not True %}
-	    <input class="btn btn-primary" type="submit" name="approve" value="Approve Project" />
+	    <input class="btn btn-success" type="submit" name="approve" value="Approve Project" />
     {% endif %}
     {% if project.list_project is not False %}
-	    <input class="btn btn-primary" type="submit" name="reject" value="Reject Project" />
+	    <input class="btn btn-warning" type="submit" name="reject" value="Reject Project" />
     {% endif %}
 </form>
 
