--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -26,19 +26,46 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <p>If you want a new community to participate in Outreachy, you will need to review the <a href="/mentor/">coordinator duties</a> and <a href="/mentor/community-faq/">community requirements</a> for participating in internships. Then submit a new community for review.
 </p>
 <a class='btn btn-primary' href="/communities/cfp/add/">Submit a New Community</a>
+
+
 <h2>Mentor or Volunteer for a Participating FOSS Community</h2>
+
 <p>If you would like to volunteer or mentor with Outreachy, review the list of participating communities below who are looking for help. Make sure to <a href="/mentor/">review the duties and expections</a> for mentors and volunteers before you sign up to help a community.</p>
 
-<ul>
-{% for c in participating_communities %}
-	<li><a href="/communities/cfp/{{ c.slug }}/">{{ c.name }}</a></li>
-{% endfor %}
-</ul>
+{% if approved_communities %}
+	<p>The community coordinator has indicated these communities will participate in this Outreachy internship round, and the communities have been approved by the Outreachy organizers to participate.</p>
+	<ul>
+	{% for c in approved_communities %}
+		<li><a href="/communities/cfp/{{ c.slug }}/">{{ c.name }}</a></li>
+	{% endfor %}
+	</ul>
+{% endif %}
 
-<p>If a community that participated in Outreachy in the past hasn't announced they're participating in this round, and you want to mentor or volunteer for that community, you can sign up below to receive an email notification when the community joins the current round.</p>
+{% if pending_communities %}
+	<p>The community coordinator has indicated these communities will participate in this Outreachy internship round, but Outreachy organizer approval is still pending. Mentors and volunteers are encouraged to sign up while the community is under review.</p>
+	<ul>
+	{% for c in pending_communities %}
+		<li><a href="/communities/cfp/{{ c.slug }}/">{{ c.name }}</a></li>
+	{% endfor %}
+	</ul>
+{% endif %}
 
-<h2>Coordinate for a FOSS Community</h2>
-<p>Coordinations should <a href="/mentor/">understand the coordinator duties</a> and what <a href="/mentor/community-faq">information they will need to update</a> about the community.</p>
+{% if rejected_communities %}
+	<h2>Not Participating FOSS Communities</h2>
+
+	<p>Unfortunately, either the community coordinator(s) or the Outreachy organizers have determined that the following communities will not participate in this round of Outreachy internships.</p>
+
+	<ul>
+	{% for c in rejected_communities %}
+		<li><a href="/communities/cfp/{{ c.slug }}/">{{ c.name }}</a></li>
+	{% endfor %}
+	</ul>
+{% endif %}
+
+<h2>Past Participating FOSS Communities</h2>
+<p>In order for a community to participate in an Outreachy internship round, the community must have at least one coordinator. If you would like to volunteer to be a coordinator, you should <a href="/mentor/">understand the coordinator duties</a> and what <a href="/mentor/community-faq">information they will need to update</a> about the community.</p>
+
+<p>Mentors and volunteers may visit the community page and sign up to receive an email notification when a coordinator signs the community up for this Outreachy round.</p>
 
 <ul>
 {% for c in not_participating_communities %}
