--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -13,51 +13,82 @@ Past community participation in Outreachy
 {% block content %}
 
 {% if participation_info %}
-	<h1>{{ community.name }} in Outreachy</h1>
+	{% if participation_info.list_community is True %}
+		<h1>Approved Outreachy Community</h1>
+		<h2>{{ community.name }}</h2>
 
-	<p>{{ community.name }} is participating in {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round.</p>
+		<p>{{ community.name }} is participating in {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round.</p>
 
-	{% if participation_info.list_community %}
 		<p>The Outreachy organizers have received confirmation for funding of {{ participation_info.interns_funded }} intern(s).
 		Once the application period starts, the community will be listed on the <a href="/{{ current_round.slug }}/">round home page</a>, with a link to
 		the <a href="/{{ current_round.slug }}/communities/{{ community.slug }}">community landing page</a>. The landing page contains detailed information about the community and approved projects.</p>
+
+	{% elif participation_info.list_community is None %}
+		<h1>Pending Outreachy Community</h1>
+		<h2>{{ community.name }}</h2>
+		<p>Outreachy organizers are still working with the coordinator(s) on funding details, so Outreachy applicants will not be shown the community landing page yet. Mentors are encouraged to submit projects for review, and volunteers are encouraged to sign up to help Outreachy applicants.</p>
+
 	{% else %}
-		<p>Outreachy organizers are still working with the coordinator(s) on funding details, so Outreachy applicants will not be shown the community landing page yet.</p>
+		<h1>Community Not Participating</h1>
+		<h2>{{ community.name }}</h2>
+		<p>Unfortunately, either the community coordinator(s) or the Outreachy organizers have determined that the following communities will not participate in this round of Outreachy internships.</p>
+
 	{% endif %}
-	<h2>Submit a Project</h2>
-	<a class='btn btn-primary' href="{% url 'project-participate' community.slug %}">Submit a New Project</a>
-	{% if pending_projects %}
-		<h2>Projects waiting for approval</h2>
-		<p>The {{ community.name }} coordinator is currently reviewing the following projects to see if they are a good fit for the Outreachy program and fit with long-term community goals.</p>
-		<ul>
-		{% for project in pending_projects %}
-			<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
-		{% endfor %}
-		</ul>
-	{% endif %}
-	{% if approved_projects %}
-		<h2>Approved projects</h2>
-		<p>These projects have been approved to be listed on the community landing page. Mentors are encouraged to start promoting their projects as soon as the Outreachy round opens on {{ current_round.appsopen }}.</p>
-		<ul>
-		{% for project in approved_projects %}
-			{% if project.accepting_new_applicants %}
+
+	<h2>Outreachy Organizer Actions</h2>
+	<p>Outreachy organizers should read over the information coordinators provided about participating in this round (including intern funding information) and information about new communities. Then decide whether the community should participate in this round and either accept or reject the community.</p>
+	<form action="{% url 'community-status' community_slug=community.slug %}" method="post">
+	    {% csrf_token %}
+	    {% if participation_info.list_community is not True %}
+		    <input class="btn btn-success" type="submit" name="approve" value="Approve Community" />
+	    {% endif %}
+	    {% if participation_info.list_community is not False %}
+		    <input class="btn btn-warning" type="submit" name="reject" value="Reject Community" />
+	    {% endif %}
+	</form>
+	<p>Round participation information</p>
+	<ul>
+		<li>Number of interns funded: {{ participation_info.interns_funded }}</li>
+		<li>CFP text: {{ participation_info.cfp_text }}</li>
+	</ul>
+
+	{% if participation_info.list_community is not False %}
+		<h2>Submit a Project</h2>
+		<a class='btn btn-primary' href="{% url 'project-participate' community.slug %}">Submit a New Project</a>
+		{% if pending_projects %}
+			<h2>Projects waiting for approval</h2>
+			<p>The {{ community.name }} coordinator is currently reviewing the following projects to see if they are a good fit for the Outreachy program and fit with long-term community goals.</p>
+			<ul>
+			{% for project in pending_projects %}
 				<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
-			{% else %}
-				<li>(Closed to new applicants) <a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
-			{% endif %}
-		{% endfor %}
-		</ul>
+			{% endfor %}
+			</ul>
+		{% endif %}
+		{% if approved_projects %}
+			<h2>Approved projects</h2>
+			<p>These projects have been approved to be listed on the community landing page. Mentors are encouraged to start promoting their projects as soon as the Outreachy round opens on {{ current_round.appsopen }}.</p>
+			<ul>
+			{% for project in approved_projects %}
+				{% if project.accepting_new_applicants %}
+					<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
+				{% else %}
+					<li>(Closed to new applicants) <a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
+				{% endif %}
+			{% endfor %}
+			</ul>
+		{% endif %}
+		{% if rejected_projects %}
+			<h2>Rejected projects</h2>
+			<p>The {{ community.name }} coordinator(s) or Outreachy organizers do not think the following projects are suitable for participation in the {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.</p>
+			<ul>
+			{% for project in rejected_projects %}
+				<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
+			{% endfor %}
+			</ul>
+		{% endif %}
+		{% comment %} Only show this to people who aren't a coordinator for this community. {% endcomment %}
 	{% endif %}
-	{% if rejected_projects %}
-		<h2>Rejected projects</h2>
-		<p>The {{ community.name }} coordinator(s) or Outreachy organizers do not think the following projects are suitable for participation in the {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.</p>
-		<ul>
-		{% for project in rejected_projects %}
-			<li><a href="/communities/cfp/{{ community.slug }}/{{ project.slug }}">{{ project.short_title }}</a></li>
-		{% endfor %}
-		</ul>
-	{% endif %}
-	{% comment %} Only show this to people who aren't a coordinator for this community. {% endcomment %}
+
 	<h2>Coordinators</h2>
 	<p>This community currently has a coordinator. If you have been a community coordinator in the past but have not yet created an account on this site, or you would like to volunteer to be a new coordinator or a co-coordinator and you understand the <a href="/mentor/">coordinator duties</a>, you can <a href="/communities/cfp/{{ community.slug }}/coordinator-signup/">claim the community</a>.</p>
 
